[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wisteria_submit"
version = "0.1.0"
description = "Utility for submitting jobs on Wisteria from Jupyter"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kenjiro Taura", email = "tau@g.ecc.u-tokyo.ac.jp" }]
requires-python = ">=3.8"
dependencies = [
    "ipython",
    "ipywidgets",
]

[project.scripts]
sub = "wisteria_submit.cli:main"

[project.urls]
Homepage = "https://github.com/taura/wisteria_submit"

[tool.setuptools.packages.find]
where = ["src"]
